# hudl

./: .gitignore  AGENTS.md  Cargo.toml  DATASTAR_DESIGN.md  DESIGN.md  HUDL_CLI_DESIGN.md  Makefile  NAMING_IDEAS.md  PLAN.md  PREVIEW_DESIGN.md  PREVIEW_DESIGN_2.md  README.md  TESTING.md  WASM_INTEROP.md  debug_else.go  docs.md  fix_codegen.go  fix_parser.go  go.mod  go.sum  hudl  hudlc  install  layout.hu.kdl  package-lock.json  package.json
cmd/hudl/: main.go  main_test.go
cmd/hudl-analyzer/: main.go
docs/features/: DATASTAR_DESIGN.md  HUDL_CLI_DESIGN.md  PREVIEW_DESIGN.md  REFACTOR_DESIGN.md  VALIDATION_EXTENSION_DESIGN.md  WASM_INTEROP_DESIGN.md
editor/helix/: languages.toml
examples/: dashboard.hu.kdl  dashboard.hudl  dashboard_composed.hudl  error_proto.hudl  form.hu.kdl  form.hudl  layout.hu.kdl  layout.hudl  marketing.hu.kdl  marketing.hudl  simple.hudl  stat_card.hudl  styled_button.hudl
examples/datastar/: active_search.hudl  animations.hudl  bulk_update.hudl  click_to_edit.hudl  click_to_load.hudl  custom_event.hudl  dbmon.hudl  delete_row.hudl  edit_row.hudl  (+14 more)
extension/: package.json
gohtest/: go.mod
gootest/: main.go
lsp/: Cargo.toml
lsp/preview/: index.html  vite.config.js
lsp/preview/src/: App.svelte  app.css
lsp/preview/src/components/: ActionLog.svelte  ComponentSelect.svelte  Editor.svelte  Preview.svelte  SignalDebug.svelte
lsp/preview/src/lib/: api.js  websocket.js
lsp/src/: analyzer_client.rs  component_registry.rs  datastar.rs  dev_server.rs  exhaustiveness.rs  main.rs  param.rs  scope.rs
lsp/tests/: dev_server_http_test.rs  file_watcher_test.rs  lsp_protocol_test.rs
proto/: views.proto
quick-start/: go.mod  main.go
scripts/: debug-kdl.rs  debug-lsp.py  debug-lsp.sh  test-lsp.py  test_component_type_mismatch.py  test_proto_error.py
src/: ast.rs  cel.rs  codegen.rs  codegen_cel.rs  codegen_go.rs  expr.rs  formatter.rs  interpreter.rs  lib.rs  main.rs  parser.rs  proto.rs  textproto.rs  transformer.rs  transformer.rs_temp
testgo/: go.mod  go.sum  main.go
tests/: codegen_expr_spec.rs  compiler_spec.rs  datastar_missing_edge_cases_spec.rs  datastar_spec.rs  examples_spec.rs  expr_spec.rs
tree-sitter-hudl/: grammar.js  package.json  tree-sitter.json
(+34 files in other folders)
