[package]
name = "hudlc"
version = "0.1.0"
edition = "2021"

[dependencies]
kdl = "6.5.0"
regex = "1.10.0" # Needed for PreParser
serde = { version = "1.0.228", features = ["derive"] }
serde_cbor = "0.11.2"
cel-interpreter = { package = "cel", version = "0.12.0", default-features = false }

[lib]
path = "src/lib.rs"

[[bin]]
name = "hudlc"
path = "src/main.rs"
