[package]
name = "hudlc"
version = "0.1.0"
edition = "2021"

[dependencies]
kdl = "6.5.0"
regex = "1.10.0" # Needed for PreParser
serde = { version = "1.0.228", features = ["derive"] }
cel-interpreter = { package = "cel", version = "0.12.0", default-features = false }
protobuf-parse = "3.7.1" # Proto definition parsing
# Note: serde_cbor removed - using proto wire format instead

[lib]
path = "src/lib.rs"

[[bin]]
name = "hudlc"
path = "src/main.rs"
