[package]
name = "hudl-lsp"
version = "0.1.0"
edition = "2021"

[lib]
name = "hudl_lsp"
path = "src/lib.rs"

[[bin]]
name = "hudl-lsp"
path = "src/main.rs"

[dependencies]
hudlc = { version = "0.1.0", path = ".." }
kdl = "6.5.0"
lsp-types = "0.97.0"
tokio = { version = "1.49.0", features = ["full", "process", "io-util"] }
tower-lsp = "0.20.0"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.8", features = ["ws"] }
notify = { version = "7", features = ["macos_kqueue"] }
tower-http = { version = "0.6", features = ["cors"] }
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
async-stream = "0.3"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
reqwest = { version = "0.12", features = ["json"] }
